<resources>
    <string name="app_name">Carpool</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  国雄的-->
    <string name="login_top">CarPool</string>
    <string name="login_num">账号：</string>
    <string name="login_pass">密码：</string>
    <string name="login_sure">登陆</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_register">注册新账号？</string>
    <string name="forget_top">忘记密码</string>
    <string name="forget_num">账号：</string>
    <string name="forget_pass">验证码：</string>
    <string name="forget_pass_send">重新发送</string>
    <string name="forget_sure">发送验证邮件</string>
    <string name="reset_top">重设密码</string>
    <string name="reset_new_password">新密码：</string>
    <string name="reset_in_new_password">再次输入：</string>
    <string name="reset_sure">确定</string>
    <string name="register_top">注册</string>
    <string name="register_num">账号:</string>
    <string name="register_password">密码:</string>
    <string name="register_again_password">再次输入:</string>
    <string name="register_test">验证码:</string>
    <string name="register_again_test_send">重新发送</string>
    <string name="register_sure">发送验证邮件</string>
    <string name="main_start">出发地</string>
    <string name="main_end">目的地</string>
    <string name="main_time">出发时间:</string>
    <string name="main_sure">搜索</string>
    <string name="my_info_text1">姓名:</string>
    <string name="my_info_text2">昵称:</string>
    <string name="my_info_text3">性别:</string>
    <string name="my_info_text4">手机号:</string>
    <string name="my_info_text5">微信号:</string>
    <string name="my_info_text6">Q Q 号:</string>
    <string name="my_info_text7">信用度:</string>
    <string name="my_info_text8">自我介绍:</string>
    <string name="publish_text1">日期:</string>
    <string name="publish_text2">出发地:</string>
    <string name="publish_text3">目的地:</string>
    <string name="publish_text4">出发时间:</string>
    <string name="publish_text5">包车价格:</string>
    <string name="publish_text6">总人数:</string>
    <string name="publish_text7">已有人数:</string>
    <string name="publish_text8">联系方式:</string>
    <string name="publish_text9">详细信息:</string>
    <string name="publish_sure">发布</string>
    <string name="my_have_publish">我发布的拼单</string>
    <string name="my_have_join">我加入的拼单</string>
    <string name="my_have_done">我经历过的拼单</string>
    <string name="search_pay">价格:</string>
    <string name="search_link">联系方式:</string>
    <string name="forget_new_password">新密码:</string>
    <string name="forget_password_again">确认密码:</string>
    <string name="register_phone">电话号码:</string>
    <string name="message_top">留言</string>
    <string name="message_send">发送</string>
    <!--国雄的-->

</resources>
