<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">
    <TextView
        android:id="@+id/login_top"
        android:gravity="center"
        android:text="@string/login_top"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:background="@color/top"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/car"
        android:id="@+id/login_img"
        android:layout_below="@+id/login_top"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textColor="@color/textColor"
        android:textSize="25dp"
        android:id="@+id/login_num"
        android:text="@string/login_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"/>
    <EditText
        android:textColor="@color/textColor"
        android:background="@drawable/bg_edittext"
        android:id="@+id/login_num_input"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:paddingLeft="10dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/login_num"
        android:layout_toEndOf="@+id/login_num"/>
    <TextView
        android:textColor="@color/textColor"
        android:textSize="25dp"
        android:id="@+id/login_pass"
        android:text="@string/login_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_num"
        android:layout_alignStart="@+id/login_num"/>
    <EditText
        android:textColor="@color/textColor"
        android:background="@drawable/bg_edittext"
        android:id="@+id/login_pass_input"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:paddingLeft="10dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/login_pass" android:layout_toEndOf="@+id/login_pass"/>
    <Button
        android:layout_width="200dp"
        android:background="@drawable/sure_button"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/login_sure"
        android:id="@+id/login_sure"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/login_pass"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forget"
        android:textColor="@color/top"
        android:background="#00000000"
        android:id="@+id/login_forget"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/login_sure"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textColor="@color/top"
        android:layout_marginRight="10dp"
        android:id="@+id/login_register"
        android:background="#00000000"
        android:layout_below="@+id/login_forget" android:layout_alignParentEnd="true"/>
</RelativeLayout>
