<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/reset_top"
        android:gravity="center"
        android:text="@string/reset_top"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:background="@color/top"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <TextView
        android:textColor="@color/textColor"
        android:textSize="25dp"
        android:text="@string/reset_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_top"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/reset_new_password"/>
    <EditText
        android:textColor="@color/textColor"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:background="@drawable/bg_edittext"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:id="@+id/reset_new_password_input"
        android:layout_alignBottom="@+id/reset_new_password"
        android:layout_toEndOf="@+id/reset_new_password"/>
    <TextView
        android:textColor="@color/textColor"
        android:id="@+id/reset_in_new_password"
        android:textSize="25dp"
        android:text="@string/reset_in_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_new_password"
        android:layout_toStartOf="@+id/reset_new_password_input"
        android:layout_marginTop="20dp"/>
    <EditText
        android:textColor="@color/textColor"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:background="@drawable/bg_edittext"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:id="@+id/reset_in_new_password_input"
        android:layout_alignBottom="@+id/reset_in_new_password"
        android:layout_toEndOf="@+id/reset_in_new_password"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_sure"
        android:background="@drawable/sure_button"
        android:textColor="@color/white"
        android:id="@+id/reset_sure"
        android:layout_below="@+id/reset_in_new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

</RelativeLayout>