<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/forget_top"
        android:gravity="center"
        android:text="@string/forget_top"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:background="@color/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:src="@drawable/back"
        android:id="@+id/imageButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"/>
    <TextView
        android:textColor="@color/textColor"
        android:id="@+id/forget_num"
        android:textSize="25dp"
        android:layout_marginLeft="30dp"
        android:text="@string/forget_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/forget_top"
        android:layout_alignParentStart="true"/>
    <EditText
        android:textColor="@color/textColor"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:background="@drawable/bg_edittext"
        android:paddingLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/forget_num"
        android:layout_toEndOf="@+id/forget_num"
        android:id="@+id/forget_num_input"/>
    <Button
        android:background="@drawable/sure_button"
        android:textColor="@color/white"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/forget_sure"
        android:id="@+id/forget_sure"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/forget_new_password" />
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_new_password"
        android:textSize="25dp"
        android:id="@+id/forget_new_password" android:layout_below="@+id/forget_num" android:layout_alignEnd="@+id/forget_num"
        android:layout_marginTop="10dp"/>
    <EditText
        android:textColor="@color/textColor"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:background="@drawable/bg_edittext"
        android:paddingLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/forget_new_password_input" android:layout_alignTop="@+id/forget_new_password"
        android:layout_alignStart="@+id/forget_num_input"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_again"
        android:textSize="23dp"
        android:layout_marginTop="30dp"
        android:id="@+id/forget_password_again" android:layout_below="@+id/forget_new_password"
        android:layout_alignEnd="@+id/forget_new_password"/>
    <EditText
        android:textColor="@color/textColor"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:background="@drawable/bg_edittext"
        android:paddingLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/forget_password_again_input"
        android:layout_alignBottom="@+id/forget_password_again"
        android:layout_alignStart="@+id/forget_new_password_input"/>
</RelativeLayout>