<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/register_top"
        android:gravity="center"
        android:text="@string/register_top"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:background="@color/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:src="@drawable/back"
        android:id="@+id/register_back"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_alignParentStart="true"/>
    <TextView
        android:textColor="@color/textColor"
        android:id="@+id/register_num"
        android:textSize="25dp"
        android:text="@string/register_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/register_top"/>
    <EditText
        android:textColor="@color/textColor"
        android:id="@+id/register_num_input"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:layout_marginLeft="20dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginRight="30dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/register_num"
        android:layout_toEndOf="@+id/register_num"/>
    <TextView
        android:textColor="@color/textColor"
        android:id="@+id/register_password"
        android:textSize="25dp"
        android:text="@string/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_num"
        android:layout_alignStart="@+id/register_num"
        android:layout_marginTop="20dp"/>
    <EditText
        android:textColor="@color/textColor"
        android:id="@+id/register_password_input"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:background="@drawable/bg_edittext"
        android:layout_marginRight="30dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/register_password"
        android:layout_alignStart="@+id/register_num_input"/>
    <TextView
        android:textColor="@color/textColor"
        android:id="@+id/register_again_password"
        android:text="@string/register_again_password"
        android:textSize="25dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="20dp"/>
    <EditText
        android:textColor="@color/textColor"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:paddingLeft="10dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginRight="30dp"
        android:id="@+id/register_again_password_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/register_again_password"
        android:layout_alignStart="@+id/register_password_input"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register_sure"
        android:id="@+id/register_sure"
        android:background="@drawable/sure_button"
        android:textColor="@color/white"
        android:layout_below="@+id/register_phone" android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_phone"
        android:textSize="25dp"
        android:id="@+id/register_phone"
        android:layout_below="@+id/register_again_password" android:layout_alignEnd="@+id/register_again_password"
        android:layout_marginTop="19dp"/>
    <EditText
        android:textColor="@color/textColor"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:paddingLeft="10dp"
        android:inputType="number"
        android:background="@drawable/bg_edittext"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/register_phone_input" android:layout_alignBottom="@+id/register_phone"
        android:layout_alignStart="@+id/register_again_password_input"/>
</RelativeLayout>