<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_text6"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/publish_text6"
        android:layout_below="@+id/publish_text5"
        android:layout_toStartOf="@+id/publish_pay"/>
    <EditText
        android:textColor="@color/textColor"
        android:id="@+id/publish_people"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="20dp"
        android:inputType="number"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:paddingLeft="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_edittext"
        android:layout_alignTop="@+id/publish_text6"
        android:layout_toEndOf="@+id/publish_text6"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_text7"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/publish_text7"
        android:layout_below="@+id/publish_text6"
        android:layout_alignEnd="@+id/publish_text3"/>
    <EditText
        android:textColor="@color/textColor"
        android:id="@+id/publish_have_people"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="20dp"
        android:inputType="number"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:paddingLeft="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_edittext"
        android:layout_alignTop="@+id/publish_text7"
        android:layout_toEndOf="@+id/publish_text3"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_text9"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/publish_text9"
        android:layout_below="@+id/publish_text8"
        android:layout_alignEnd="@+id/publish_text3"/>
    <EditText
        android:textColor="@color/textColor"
        android:lines="3"
        android:id="@+id/publish_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColorHint="#AAAAAA"
        android:hint="请输入..."
        android:paddingLeft="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_edittext"
        android:layout_alignTop="@+id/publish_text9" android:layout_toEndOf="@+id/publish_text3"/>
    <Button
        android:background="@drawable/sure_button"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/publish_sure"
        android:id="@+id/publish_sure"
        android:layout_below="@+id/publish_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>