<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/see_info_img"
        android:src="@drawable/picture"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_info_text1"
        android:textSize="20dp"
        android:id="@+id/my_info_text1"
        android:layout_alignTop="@+id/see_info_img"
        android:layout_toEndOf="@+id/see_info_img"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="@string/my_info_text2"
        android:id="@+id/my_info_text"
        android:layout_below="@+id/my_info_text1"
        android:layout_toEndOf="@+id/see_info_img"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_info_text3"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/my_info_text3" android:layout_below="@+id/my_info_text"
        android:layout_toEndOf="@+id/see_info_img"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/see_info_name"
        android:paddingLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignBottom="@+id/my_info_text1"
        android:layout_toEndOf="@+id/my_info_text1"
        android:layout_marginEnd="30dp"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:id="@+id/see_info_nickname"
        android:paddingLeft="10dp"
        android:layout_marginEnd="30dp"
        android:layout_alignBottom="@+id/my_info_text"
        android:layout_alignStart="@+id/see_info_name"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:id="@+id/see_info_sex"
        android:paddingLeft="10dp"
        android:layout_marginEnd="30dp"
        android:layout_alignBottom="@+id/my_info_text3"
        android:layout_alignStart="@+id/see_info_nickname"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_info_text4"
        android:textSize="20dp"
        android:layout_marginStart="15dp"
        android:id="@+id/my_info_text4" android:layout_below="@+id/see_info_img"
        android:layout_alignStart="@+id/see_info_img" android:layout_marginTop="10dp"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_info_text5"
        android:textSize="20dp"
        android:id="@+id/my_info_text5"
        android:layout_marginTop="20dp" android:layout_below="@+id/my_info_text4"
        android:layout_alignStart="@+id/my_info_text4"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_info_text6"
        android:textSize="20dp"
        android:id="@+id/my_info_text6"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/my_info_text5" android:layout_alignEnd="@+id/my_info_text5"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_info_text7"
        android:textSize="20dp"
        android:id="@+id/my_info_text7"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/my_info_text6" android:layout_alignStart="@+id/my_info_text6"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_info_text8"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/my_info_text8"
        android:layout_below="@+id/my_info_text7" android:layout_alignStart="@+id/see_info_img"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:id="@+id/see_info_phone"
        android:paddingLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_alignBottom="@+id/my_info_text4"
        android:layout_toEndOf="@+id/my_info_text4"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:id="@+id/see_info_wechat"
        android:paddingLeft="10dp"
        android:layout_marginEnd="30dp"
        android:layout_alignBottom="@+id/my_info_text5"
        android:layout_alignStart="@+id/see_info_phone"/>
    <TextView
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:id="@+id/see_info_qq"
        android:paddingLeft="10dp"
        android:layout_marginEnd="30dp"
        android:layout_alignBottom="@+id/my_info_text6"
        android:layout_alignStart="@+id/see_info_wechat"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/good"
        android:id="@+id/see_info_good_img" android:layout_above="@+id/my_info_text8"
        android:layout_alignStart="@+id/see_info_qq"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8"
        android:textSize="20dp"
        android:textColor="@color/top"
        android:id="@+id/see_info_good"
        android:layout_marginStart="10dp"
        android:layout_alignBottom="@+id/see_info_good_img"
        android:layout_toEndOf="@+id/see_info_good_img"/>
    <ImageView
        android:src="@drawable/bad"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/see_info_bad_img" android:layout_above="@+id/my_info_text8"
        android:layout_toEndOf="@+id/see_info_good"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:textColor="#1afa29"
        android:id="@+id/see_info_bad" android:layout_alignBottom="@+id/see_info_bad_img"
        android:layout_toEndOf="@+id/see_info_bad_img"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="80%"
        android:textSize="25dp"
        android:layout_marginStart="25dp"
        android:textColor="#ff5555"
        android:id="@+id/see_info_credit" android:layout_alignBottom="@+id/see_info_bad"
        android:layout_toEndOf="@+id/see_info_bad"/>
    <TextView
        android:textColor="@color/textColor"
        android:lines="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/see_info_show_other" android:layout_alignTop="@+id/my_info_text8"
        android:layout_alignStart="@+id/see_info_good_img"/>

</RelativeLayout>